--- a/client/src/pages/messenger/messenger.css
+++ b/client/src/pages/messenger/messenger.css
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
 }
 .chatBoxTop{
     height: 100%;
@@ -50,4 +51,11 @@
 .chatMenuWrapper, .chatBoxWrapper , .chatWrapperOnline{
     padding: 10px;
     height: 100%;
+}
+.noConversationText{
+    position: absolute;
+    top:10%;
+    font-size: 50px;
+    color: rgb(235, 229, 229);
+    cursor: default;
 }
